fix travis file, 2nd attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: scala
 scala:
    - 2.11.8
-sbt ++$TRAVIS_SCALA_VERSION testOnly -- -l RequireDB
+script: sbt ++$TRAVIS_SCALA_VERSION testOnly -- -l RequireDB
