--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ scala:
    - 2.11.8
 jdk:
   - oraclejdk8
-script: sbt ++$TRAVIS_SCALA_VERSION testOnly -- -l RequireDB
+script: sbt ++$TRAVIS_SCALA_VERSION "testOnly -- -l RequireDB"
